--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -56,7 +56,7 @@ en:
     desc: Descending
     relevance: Relevance
     title_sort: Title
-    system_mtime: Modified
+    user_mtime: Modified
     create_time: Created
 
   errors:
