Remove forced placeholders for date widgets (can be set now in locales '_placeholder'); Also remove the auto calendar widget and now offer a button to display the widget on demand;

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -907,12 +907,14 @@ en:
         <li>unknown <em>(for events)</em></li>
         </ul>
     begin: Begin
+    begin_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     begin_tooltip: |
         <p>A normalized date (in the form YYYY, YYYY-MM, or YYYY-MM-DD) representing a single date or the first date in a date range.</p>
         <p>See DACS 2.4.7-2.4.16</p>
         <p>A.D. years are expressed with four digits.</p>
         <p>B.C. years are expressed as a negative number, e.g., -214 for 214 B.C.</p>
     end: End
+    end_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     end_tooltip: |
         <p>A normalized date (in the form YYYY, YYYY-MM, or YYYY-MM-DD) representing the second date in a date range.</p>
         <p>See DACS 2.4.7-2.4.16</p>
@@ -945,6 +947,7 @@ en:
   accession:
     <<: *section_tooltips
     accession_date: Accession Date
+    accession_date_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     accession_date_tooltip: |
         <p>REQUIRED FIELD: The date the accession took place. It is not 
         necessarily the same date as when the record is created.</p>
@@ -1492,8 +1495,11 @@ en:
     text_4: Text 4
     text_5: Text 5
     date_1: Date 1
+    date_1_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     date_2: Date 2
+    date_2_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     date_3: Date 3
+    date_3_inline_help: e.g. YYYY, YYYY-MM, or YYYY-MM-DD
     _singular: User Defined
     _plural: User Defined
 
