--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -660,6 +660,7 @@ en:
   note_outline:
     <<: *note_attributes
     option: Outline
+    levels: Levels
 
   container: &container_attributes
     type_1: Container 1 Type 
