Show a better message if a save fails due to a conflict error.
How it works:

  * When the CRUD handler catches a ConflictException, it sets an
    instance variable to indicate the failure.

  * When the update monitor form params are processed by the form
    helper, it adds a data-* variable to the form indicating that the
    record is already known to be stale.

  * The 'poll' of the update monitor JavaScript looks for this flag
    before sending its AJAX query.  If the record is already known to
    be stale, it immediately shows a modified version of the "This
    record has been updated by another user" message.

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -621,5 +621,6 @@ en:
                   <div><small>Clicking 'Add Row' will copy values from the last row; The row's '+' button will copy values from the currently focused row.</small></div>
 
   update_monitor:
+    save_failed: <strong>Failed to save your changes</strong>
     stale_record: This record has been updated by another user. Please refresh the page to access the latest version.
     other_editors: "This record is currently being edited by another user.  Please contact the following users to ensure no conflicts occur: <strong>%{user_ids}</strong>"
