--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -156,6 +156,10 @@ en:
     list_reports: Reports
     global_admin: System
 
+  browser_support:
+    bronze: Archives Space does not fully support this browser.  Please consider upgrading your browser to the latest versions of either Chrome, Firefox or Internet Explorer.
+    unknown: Archives Space does not fully support this browser.  Please consider upgrading your browser to the latest versions of either Chrome, Firefox or Internet Explorer.
+
   welcome:
     heading: Welcome to ArchivesSpace
     message: Your friendly archives management tool.
