Fix backend test now agent date requires a certain type 'existence'; Remove some debugging and added some missing i18ns;

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -969,7 +969,7 @@ en:
   existence_date:
     <<: *date_attributes
     
-  useage_date:
+  usage_date:
     <<: *date_attributes
     
   date_fields:
