add event types for accessions

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -227,6 +227,7 @@ en:
       assessment: Assessment
       capture: Capture
       cataloging: Cataloging
+      cataloged: Cataloged
       collection: Collection
       compression: Compression
       contribution: Contribution
@@ -243,6 +244,7 @@ en:
       migration: Migration
       normalization: Normalization
       processing: Processing
+      processed: Processed
       publication: Publication
       replication: Replication
       resource_merge: Resource Merge
