Rename 'Enumerations' to 'Controlled Value Lists' in UI
Recommended by Laurel during her work on documentation

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -187,12 +187,12 @@ en:
     event_type: Type
     event_type_toolkit: |
         <p>A categorization of the nature of the event.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>See PREMIS eventType</p>
     outcome: Outcome
     outcome_tooltip: |
         <p>A categorization of the overall result of the event in terms of success, partial success, or failure. Recommended practice is to use a controlled vocabulary that a system can act upon automatically. More detail about the outcome may be recorded in an Outcome Note. Recommended practice is to define events with sufficient granularity that each event has a single outcome.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     outcome_note: Outcome Note
     outcome_note_tooltip: |
         <p>A detailed description of the result or product of the event. This may be used to record all error and warning messages issued by a program involved in the event or to record a pointer to an error log.</p>
@@ -301,11 +301,11 @@ en:
     source: Source
     source_tooltip: |
         <p>CONDITIONALLY REQUIRED FIELD, if Name Rules is not used. An indicator of the authoritative source from which the name was taken.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     rules: Rules
     rules_tooltip: |
         <p>CONDITIONALLY REQUIRED FIELD, if Name Source is not used. An indication of the rules used to formulate the name entry.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     name_order: Name Order
     name_order_tooltip: |
         <p>Indicates if the name form should be displayed in inverted (last name, first name) order or in direct order (first name last name).</p>
@@ -451,7 +451,7 @@ en:
     salutation: Salutation
     salutation_tooltip: |
         <p>Salutation for the contact person.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     address_1: Address 1
     address_1_tooltip: |
         <p>Address for the contact person.</p>
@@ -654,7 +654,7 @@ en:
     type_1: Container 1 Type 
     type_1_tooltip: &container_type_tooltip |
         <p>The type of the primary container in which the described material is housed.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     indicator_1: Container 1 Indicator
     indicator_1_tooltip: &container_indicator_tooltip |
         <p>An alphanumeric expression for indicating the place of a container in a sequence of containers.</p>
@@ -677,7 +677,7 @@ en:
     instance_type: Type
     instance_type_tooltip: |
         <p>A designation of the manifestation for the described materials. The instance designation is optional, but required to open and complete a container record for the material described.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     digital_object: Digital Object
     _plural: Instances
     _singular: Instance
@@ -697,7 +697,7 @@ en:
     use_statement: Use Statement
     use_statement_tooltip: |
         <p>A descriptor indicating the use for which the digital file is intended (e.g., a thumbnail).</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     xlink_actuate_attribute: XLink Actuate Attribute
     xlink_actuate_attribute_tooltip: |
         <p>An XLink attribute used for export for indicating how the digital object should display (e.g. whether the link occurs automatically or must be requested by the user). It is used in conjunction with the XLink Show attribute.</p>
@@ -707,7 +707,7 @@ en:
     file_format_name: File Format Name
     file_format_name_tooltip: |
         <p>The name of the format for the file type.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>Examples:</p>
         <ul>
         <li>Audio Interchange File Format (aiff)</li>
@@ -732,7 +732,7 @@ en:
     checksum_method: Checksum Method
     checksum_method_tooltip: |
         <p>The algorithm used for generating checksums.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>Examples:</p>
         <ul>
         <li>MD5</li>
@@ -754,7 +754,7 @@ en:
     extent_type: Type
     extent_type_tooltip: &extent_type_tooltip |
         <p>A term indicating the type of unit used to measure the extent of materials described.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>See DACS 2.5</p>
     container_summary: Container Summary
     container_summary_tooltip: |
@@ -1034,7 +1034,7 @@ en:
     resource_type: Resource Type
     resource_type_tooltip: |
         <p>A list of terms used by a repository for categorizing its resources into basic types.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     access_restrictions: Access Restrictions?
     access_restrictions_tooltip: |
         <p>A checkbox for indicating access to the materials is restricted.</p>
@@ -1304,7 +1304,7 @@ en:
     finding_aid_description_rules: Description Rules
     finding_aid_description_rules_tooltip: |
         <p>Indicates the descriptive rules used to guide description of the Resource.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
     finding_aid_language: Language
     finding_aid_language_tooltip: |
         <p>Indicates all the languages present in the finding aid generated from the resource description.</p>
@@ -1416,7 +1416,7 @@ en:
     source: Source
     source_tooltip: |
         <p>The vocabulary from which an established term is taken.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>Examples:</p>
         <ul>
         <li>Medical Subject Headings (mesh)</li>
@@ -1488,7 +1488,7 @@ en:
     processing_priority: Priority
     processing_priority_tooltip: |
         <p>Indicates the priority assigned to processing of an archival unit.</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>Examples:</p>
         <ul>
         <li>High</li>
@@ -1498,7 +1498,7 @@ en:
     processing_status: Processing Status
     processing_status_tooltip: |
         <p>For indicating the current status of processing for an archival unit (accession, resource, or digital object).</p>
-        <p>Values in this Enumeration may be modified.</p>
+        <p>Values in this Controlled Value List may be modified.</p>
         <p>Examples:</p>
         <ul>
         <li>New</li>
@@ -1550,15 +1550,15 @@ en:
     # tooltips not displaying
     name: Name
     name_tooltip: |
-        <p>The name of the Enumeration of to which you wish to add a value.</p>
+        <p>The name of the Controlled Value List of to which you wish to add a value.</p>
     value: Value
     value_tooltip: |
-        <p>The value for the Enumeration you wish to add or edit.</p>
-        <p>Whenever possible, Enumeration values should be in lower case and have underscores ("_") instead of spaces. Translations for the values should be added to the locales file.</p>
+        <p>The value for the Controlled Value List you wish to add or edit.</p>
+        <p>Whenever possible, values should be in lower case and have underscores ("_") instead of spaces. Translations for the values should be added to the locales file.</p>
     translation: Translation
     merge_into: Merge Into
-    _singular: Enumeration
-    _plural: Enumerations
+    _singular: Controlled Value List
+    _plural: Controlled Value lists
 
   classification:
     _singular: Classification
