--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -35,7 +35,7 @@ en:
     set_default: Set as Default
     suppress: Suppress
     suppress_confirm_title: Suppress this Record?
-    suppress_confirm_message: While a suppressed record will remain in the database, it will become hidden to most users and unavailable to most functions.
+    suppress_confirm_message: "While a suppressed record will remain in the database, it will become hidden to most users and unavailable to most functions."
     transfer: Transfer
     unset_default: Unset Default
     unsuppress: Unsuppress
@@ -147,7 +147,7 @@ en:
     repositories_manage: Manage Repositories
     manage_groups: Manage Groups
     manage_users: Manage Users
-    manage_enumerations: Manage Enumerations
+    manage_enumerations: Manage Controlled Value Lists
     manage_user_access: Manage User Access
     logout: Logout
     login: Sign In
@@ -381,20 +381,20 @@ en:
   enumeration:
     _frontend:
       messages:
-        deleted: Enumeration Value Deleted
-        delete_error: Failed to delete Enumeration Value
-        delete_conflict: "Unable to delete Enumeration as it's currently being referenced by a record"
-        default_set: Enumeration Default Set
-        created: Enumeration Value Created
-        create_error: Failed to create Enumeration Value
-        merged: Enumeration Value Merged
+        deleted: Value Deleted
+        delete_error: Failed to delete Value
+        delete_conflict: "Unable to delete Value as it's currently being referenced by a record"
+        default_set: Default Value Set
+        created: Value Created
+        create_error: Failed to create Value
+        merged: Value Merged
         merge_tip: This Value may be merged with another
-        merge_error: Failed to merge Enumeration Value
-        no_selection: Please select an Enumeration Name
-        name_selector: Enumeration Name
+        merge_error: Failed to merge Value
+        no_selection: Please select a Controlled Value List
+        name_selector: List Name
         name_selector_tooltip: |
-            <p>The enumeration to edit.</p>
-        no_name_provided: Select an Enumeration Name before creating a new value
+            <p>The Controlled Value List to edit.</p>
+        no_name_provided: Select a Value List before creating a new value
       action:
         create_value: Create Value
         delete_value: Delete Value
@@ -612,7 +612,7 @@ en:
     _frontend:
       action:
         add: Add User Defined Fields
-        
+
   use_date:
     _frontend:
       action:
