--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -19,7 +19,8 @@ en:
     link_to: Link To
     add_prefix: Add
     merge_confirm_title: Merge into this record?
-    merge_confirm_message: The subject you selected will be deleted, and any records that were linked to it will be re-linked to '%{target}'.
+    merge_subject_confirm_message: The subject you selected will be deleted, and any records that were linked to it will be re-linked to '%{target}'.
+    merge_agent_confirm_message: The agent you selected will be deleted, and any records that were linked to it will be re-linked to '%{target}'.
     move: Move
     move_up_a_level: Up a Level
     move_up: Up
@@ -233,6 +234,8 @@ en:
         created: Agent Created
         updated: Agent Saved
         deleted: Agent Deleted
+        merge_description: Merge another agent into this one by selecting it here
+        merged: Agent(s) Merged
       section:
         basic_information: Basic Information
         dates_of_existence: Dates of Existence
@@ -577,7 +580,7 @@ en:
         deleted: Subject Deleted
         merged: Subject(s) Merged
         merge_description: Merge another subject into this one by selecting it here
-        please_select_a_subject_to_merge: Please select a subject to merge with this one
+        please_select_a_subject_to_merge: Please select a subject to merge
       section:
         basic_information: Basic Information
         terms: Subject Headings
