--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -956,6 +956,9 @@ en:
   usage_date:
     <<: *date_attributes
     
+  archival_record_date:
+    <<: *date_attributes
+
   date_fields:
     <<: *date_attributes
 
