Round 7 against the events sidebar

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -408,6 +408,7 @@ en:
         deleted: Event Deleted
       section:
         basic_information: Basic Information
+        date: Event Date/Time
       action:
         save: Save Event
         create: Create Event
