WIP: add preview of the parsed notes to the frontend readonly notes view;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -493,6 +493,11 @@ en:
 
   note:
     _frontend:
+      preview:
+        raw: Raw
+        raw_title: The raw note content
+        parsed: Parsed
+        parsed_title: How the note will be rendered in the Public application
       messages:
         select_a_note_type: "<em>Please select a Note Type</em>"
       action:
