Add a new option to the user create/edit form to mark a user as an admin user.

--- a/common/locales/en.yml
+++ b/common/locales/en.yml
@@ -1455,6 +1455,7 @@ en:
     title: Title
     department: Department
     additional_contact: Additional Contact Information
+    is_admin: Grant system administrator permissions
     _singular: User
     _plural: Users
 
