--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
     confirm_removal: Confirm Removal
     container_labels: Download Container Labels
     create: Create
+    cut: Cut
     edit: Edit
     edit_groups: Edit Groups
     export: Export
@@ -26,6 +27,7 @@ en:
     move_up: Up
     move_down: Down
     move_down_into: Down Into...
+    paste: Paste
     remove: Remove
     new_prefix: New
     save_prefix: Save
