Add common/lib to the build path and include in the dist zip; Suppress the I18n warning upon frontend init;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -496,7 +496,7 @@ en:
       preview:
         raw: Raw
         raw_title: The raw note content
-        parsed: Parsed
+        parsed: Formatted
         parsed_title: How the note will be rendered in the Public application
       messages:
         select_a_note_type: "<em>Please select a Note Type</em>"
