WIP add multiselect to some Browse lists linked to a Delete button; Allow components to be viewed in both the Resource and Digital Object browse listings too;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -47,6 +47,9 @@ en:
     delete: Delete
     delete_confirm_title: Delete this Record?
     delete_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove the record from the database, including any references it has to other records.</p>"
+    delete_multiple: Delete Records
+    delete_multiple_confirm_title: Delete Records?
+    delete_multiple_confirm_message: "<p>Please be aware <strong>you cannot undo this action</strong>.</p><p>This action will remove these records from the database, including any references they have to other records.</p>"
     export_eac: Download EAC-CPF
     export_ead: Download EAD
     export_mods: Download MODS
@@ -92,6 +95,7 @@ en:
     created: Created by
     text_placeholder: Filter by text
     clear_all: Clear All
+    component_switch: Show Components
     filter:
       query: Text
       subjects: Subject
@@ -568,6 +572,7 @@ en:
         rapid_data_entry: Rapid Data Entry
         create: Create Resource
         save: Save Resource
+        delete_multiple: Delete Resources
 
   rights_statement:
     _frontend:
