Add a term map to the search controller to let us pass labels for facets through with searches

--- a/public/config/locales/en.yml
+++ b/public/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
       notes: Notes
       source: Source
       agents: Agents
+      classification_uri: Classification
 
   search_sorting:
     sort_by: "Sort by:"
