--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -168,7 +168,10 @@ en:
   batch_delete:
     archival_objects:
       success: Records deleted
-      error: "Unable to delete Records:"
+      error: "Unable to delete records:"
+    subjects:
+      success: Subjects deleted
+      error: "Unable to delete subjects:"
 
   browser_support:
     bronze: ArchivesSpace does not fully support this browser.  Please consider upgrading your browser to the latest versions of either Chrome, Firefox or Internet Explorer.
