--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -172,6 +172,9 @@ en:
     subjects:
       success: Subjects deleted
       error: "Unable to delete subjects:"
+    agents:
+      success: Agents deleted
+      error: "Unable to delete agents:"
 
   browser_support:
     bronze: ArchivesSpace does not fully support this browser.  Please consider upgrading your browser to the latest versions of either Chrome, Firefox or Internet Explorer.
