Fix locales for batch delete archival record messages; Add selenium test for batch deleting accessions;

--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -166,7 +166,7 @@ en:
     global_admin: System
 
   batch_delete:
-    archival_objects:
+    archival_records:
       success: Records deleted
       error: "Unable to delete records:"
     subjects:
