--- a/frontend/config/locales/en.yml
+++ b/frontend/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
     merge_confirm_title: Merge this record?
     merge_subject_confirm_message: The subject '%{target}' will be deleted and any linked records will be re-linked to the subject you selected.
     merge_agent_confirm_message: The agent '%{target}' will be deleted and any linked records will be re-linked to the agent you selected.
+    merge_resource_confirm_message: The agent '%{target}' will be deleted and any linked records will be re-linked to the record you selected.
     move: Move
     move_up_a_level: Up a Level
     move_up: Up
@@ -374,6 +375,10 @@ en:
         updated: "Digital Object <strong>%{digital_object.title}</strong> Updated"
         deleted: "Digital Object <strong>%{digital_object.title}</strong> Deleted"
         published: "The Digital Object <strong>%{digital_object.title}</strong>, its subrecords and components have been published"
+        merge_description: Merge this digital object into...
+        please_select_a_digital_object_to_merge: Please select a digital object
+        merged: Digital object(s) Merged
+
       section:
         basic_information: Basic Information
       action:
@@ -575,6 +580,9 @@ en:
         spawned: "A new Resource has been spawned from Accession <strong>%{accession.title}</strong>"
         deleted: "Resource <strong>%{resource.title}</strong> deleted"
         published: "The Resource <strong>%{resource.title}</strong>, its subrecords and components have been published"
+        merge_description: Merge this resource into...
+        please_select_a_resource_to_merge: Please select a resource
+        merged: Resource(s) Merged
       section:
         basic_information: Basic Information
         finding_aid: Finding Aid Data
